--- a/backend/backend.cabal
+++ b/backend/backend.cabal
@@ -7,13 +7,60 @@ library
   hs-source-dirs: src
   if impl(ghcjs)
     buildable: False
-  build-depends: base
-               , common
-               , frontend
-               , obelisk-backend
-               , obelisk-route
+  build-depends:
+      base
+    , beam-core
+    , beam-migrate
+    , beam-postgres
+    , common
+    , constraints-extras
+    , exceptions
+    , gargoyle-postgresql-connect
+    , IntervalMap
+    , frontend
+    , lens
+    , monoidal-containers
+    , mtl
+    , obelisk-backend
+    , obelisk-route
+    , postgresql-simple
+    , reflex
+    , resource-pool
+    , rhyolite-common
+    , rhyolite-backend
+    , safe-exceptions
+    , snap-core
+    , witherable
   exposed-modules:
     Backend
+  other-modules:
+    Backend.NotifyHandler
+    Backend.RequestHandler
+    Backend.Schema
+    Backend.Transaction
+    Backend.ViewSelectorHandler
+  default-extensions:
+    ConstraintKinds
+    DataKinds
+    DeriveFoldable
+    DeriveGeneric
+    DeriveTraversable
+    DerivingStrategies
+    EmptyCase
+    EmptyDataDecls
+    GADTs
+    GeneralizedNewtypeDeriving
+    KindSignatures
+    LambdaCase
+    MultiParamTypeClasses
+    OverloadedStrings
+    PolyKinds
+    RankNTypes
+    ScopedTypeVariables
+    StandaloneDeriving
+    TupleSections
+    TypeApplications
+    TypeFamilies
   ghc-options: -Wall
 
 executable backend
@@ -21,8 +68,10 @@ executable backend
   hs-source-dirs: src-bin
   if impl(ghcjs)
     buildable: False
-  build-depends: base
-               , backend
-               , common
-               , frontend
-               , obelisk-backend
+  build-depends:
+      base
+    , backend
+    , common
+    , frontend
+    , obelisk-backend
+  ghc-options: -threaded
