--- a/common/common.cabal
+++ b/common/common.cabal
@@ -5,13 +5,52 @@ build-type: Simple
 
 library
   hs-source-dirs: src
-  build-depends: base
-               , obelisk-route
-               , mtl
-               , text
+  build-depends:
+      aeson
+    , aeson-gadt-th
+    , base
+    , beam-core
+    , containers
+    , constraints-extras
+    , dependent-sum-template
+    , IntervalMap
+    , lens
+    , monoidal-containers
+    , mtl
+    , obelisk-route
+    , rhyolite-common
+    , reflex
+    , semialign
+    , text
+    , these
+    , universe
+    , witherable
   default-extensions:
-    TypeFamilies
+    ConstraintKinds
+    DataKinds
+    DeriveFoldable
+    DeriveGeneric
+    DeriveTraversable
+    DerivingStrategies
+    EmptyCase
+    EmptyDataDecls
+    GADTs
+    GeneralizedNewtypeDeriving
+    KindSignatures
+    LambdaCase
+    MultiParamTypeClasses
+    OverloadedStrings
     PolyKinds
+    RankNTypes
+    ScopedTypeVariables
+    StandaloneDeriving
+    TupleSections
+    TypeApplications
+    TypeFamilies
   exposed-modules:
-    Common.Api
+    Common.App
+    Common.Prelude
     Common.Route
+    Common.Schema
+    Data.Attoparsec.Text.BibleReference
+    Data.Bible
