--- a/frontend/frontend.cabal
+++ b/frontend/frontend.cabal
@@ -5,27 +5,57 @@ build-type: Simple
 
 library
   hs-source-dirs: src
-  build-depends: base
-               , common
-               , obelisk-frontend
-               , obelisk-route
-               , reflex-dom
-               , obelisk-generated-static
-               , text
+  build-depends:
+      base
+    , common
+    , IntervalMap
+    , lens
+    , monoidal-containers
+    , obelisk-executable-config-lookup
+    , obelisk-frontend
+    , obelisk-generated-static
+    , obelisk-route
+    , reflex-dom
+    , rhyolite-frontend
+    , rhyolite-common
+    , text
   exposed-modules:
     Frontend
+  default-extensions:
+    ConstraintKinds
+    DataKinds
+    DeriveFoldable
+    DeriveGeneric
+    DeriveTraversable
+    DerivingStrategies
+    EmptyCase
+    EmptyDataDecls
+    GADTs
+    GeneralizedNewtypeDeriving
+    KindSignatures
+    LambdaCase
+    MultiParamTypeClasses
+    OverloadedStrings
+    PolyKinds
+    RankNTypes
+    ScopedTypeVariables
+    StandaloneDeriving
+    TupleSections
+    TypeApplications
+    TypeFamilies
   ghc-options: -Wall
 
 executable frontend
   main-is: main.hs
   hs-source-dirs: src-bin
-  build-depends: base
-               , common
-               , obelisk-frontend
-               , obelisk-route
-               , reflex-dom
-               , obelisk-generated-static
-               , frontend
+  build-depends:
+      base
+    , common
+    , obelisk-frontend
+    , obelisk-route
+    , reflex-dom
+    , obelisk-generated-static
+    , frontend
   --TODO: Make these ghc-options optional
   ghc-options: -threaded
   if os(darwin)
