--- a/common/common.cabal
+++ b/common/common.cabal
@@ -20,6 +20,7 @@ library
     , obelisk-route
     , rhyolite-common
     , reflex
+    , safe
     , semialign
     , text
     , these
@@ -52,5 +53,3 @@ library
     Common.Prelude
     Common.Route
     Common.Schema
-    Data.Attoparsec.Text.BibleReference
-    Data.Bible
